<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"

    tools:context="com.example.android.textvalidationstrategy.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/whatIsEntered" />

    <CheckBox
        android:id="@+id/namber"
        android:onClick="onCheckboxNamber"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/number"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/stringLowerCase"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:onClick="onCheckboxStringLowerCase"
        android:text="@string/stringLowerCase"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/stringUpperCase"
        android:onClick="onCheckboxStringUpperCase"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/stringUpperCase"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/executionResult" />

    <TextView
        android:id="@+id/executionResultView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="2"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/enterText" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="3"
        android:ems="10" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:onClick="checkString"
        android:text="@string/check" />

</LinearLayout>
